@@ -42,6 +42,7 @@
 - API Addition: Added focusedFontColor, checkedFocusedFontColor, and getFontColor() to TextButton and ImageTextButton.
 - API Addition: Added wrapReverse setting to HorizontalGroup.
 - API Addition: Added Slider style drawables for over and down: background, knobBefore, and knobAfter.
+- Fixed LwjglFrame not hiding the canvas in some situations.
 
 [1.9.11]
 - Update to MobiVM 2.3.8
